# Motion-and-Recognition-System-Based-on-Atlas-200DK

./: README.md
Arduino/mobileBase_IIC/: beep_ring.h  beep_ring.ino  commands.h  current_detect.h  current_detect.ino  encoder_driver.h  encoder_driver.ino  mobileBase_IIC.ino  motor_driver.h  motor_driver.ino  pid_controller.h  pid_controller.ino  sensors.h  serialData.h  serialData.ino  servos_control.h  servos_control.ino  voltage_detect.h  voltage_detect.ino
MyModel/CaffeModel/MobileNet/: mobilenet.prototxt
app/: IPC_client.py  deploy.sh  qdeploy.sh
app/collision/: Makefile  graph_deploy.config  main.cpp  main.h
app/collision/camera_datasets/: Makefile
app/collision/mobilenet_inference/: Makefile  mobilenet_inference.cpp  mobilenet_inference.h
app/collision/mobilenet_post_process/: Makefile  mobilenet_post_process.cpp  mobilenet_post_process.h
app/collision/resnet_inference/: Makefile  resnet_inference.cpp  (+1 more)
app/script/: build.sh  func_deploy.sh  prepare_graph.sh  prepare_model.sh  prepare_param.sh
src/rasp_imu_hat_6dof/rasp_imu_hat_6dof/: CMakeLists.txt  package.xml
src/rasp_imu_hat_6dof/rasp_imu_hat_6dof/cfg/: param.yaml
src/rasp_imu_hat_6dof/rasp_imu_hat_6dof/nodes/: imu_data.py  imu_node.py
src/robot_amcl/: CMakeLists.txt  package.xml
src/robot_bringup/: CMakeLists.txt  package.xml
src/robot_calibration/: CMakeLists.txt  package.xml
src/robot_description/: package.xml
src/robot_navigation/: CMakeLists.txt  package.xml
src/robot_neural_netowork/: CMakeLists.txt  package.xml
src/teleop_twist_keyboard/: teleop_twist_keyboard.py
(+50 files in other folders)
